Update environment to development, enhance Command model with status and relationships, implement token refresh functionality, and add new routes for livreur commands

--- a/.env
+++ b/.env
@@ -8,6 +8,6 @@ DB_PASSWORD=
 JWT_SECRET=hsvusn9824vsdfv429898sdv4sdfv
 JWT_REFRESH_SECRET=sdv9s8dv62vsd45v95v4sd95vd4v5sdv4s5d
 
-APP_ENV=production
+APP_ENV=development
 APP_PORT=3000
 
